objects/Opp_History__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Forecast_Category__c</fullName>
        <description>Previous value</description>
        <label>From Forecast Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Omitted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Stage_Name__c</fullName>
        <description>Previous value</description>
        <label>From StageName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity it&apos;s related to</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opp History Entries</relationshipLabel>
        <relationshipName>Opp_History_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Previous_OppId__c</fullName>
        <description>from UE instance</description>
        <label>Previous OppId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>StageName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Mod_Stamp__c</fullName>
        <label>System Mod Stamp</label>
        <type>DateTime</type>
    </fields>
    <label>Opp History Entry</label>
    <nameField>
        <label>Opp_History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opp History Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>